ionos_sbx/knowledgebase/bookstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knowledgebase-ingress
  namespace: knowledgebase
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: knowledgebase.dome-marketplace-sbx.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 8080
  tls:
  - hosts:
    - knowledgebase.dome-marketplace-sbx.org
    secretName: knowledgebase-tls-secret
